--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,30 +1,21 @@
-name: Build and Deploy Jekyll Site
-
+name: Deploy Jekyll Site to Pages
 on:
   push:
-    branches:
-      - main
-
+    branches: [main]
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/jekyll-build-pages@v1.0.13
-        with:
-          source: ./docs # Adjust as needed
-          destination: ./docs/_site
-      - uses: actions/upload-pages-artifact@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build Jekyll Site
+        uses: actions/jekyll-build-pages@v1.0.13  # Use the latest version
+
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v3  # Use the latest version
         with:
           path: ./_site
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - uses: actions/deploy-pages@v1
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4  # Optional, if deploying
